	construction of :commands.  Thanks to filterfalse.

	Added 'syncregs' option which defines group of instances that share
	registers.  Patch by Ma_Sys.ma.

	Added <insert> angle bracket notation.  Thanks to j-xella.

	Added r key to :undolist menu, which resets position in the undo list to
	group under the cursor.  Thanks to mini-turtle.

	:quit, :wq, :exit, :xit, ZZ and ZQ now try to close current tab before
	closing the application.

	More explicit documentation about leaving custom views.  Thanks to
	tagwint.

	Use historical cursor position upon startup by default when 'autochpos' is
	on, this is now independent from "savedirs" in 'vifminfo' option.  Thanks
	to filterfalse.

	Use historical cursor position on navigating to a mark that doesn't specify
	a file by default when 'autochpos' is on.  Thanks to filterfalse.

	Sort entries of :bmarks menu.  Thanks to anonymous at Vifm Q2A site.

	Drop unfinished if-else statements on leaving command-line mode.  Thanks
	to Marcin Kurczewski (a.k.a. rr-).

	Move cursor after p and P to one of files that were moved or to a cause of
	last conflict.  Thanks to filterfalse and ranousse.

	Less strict parsing of output of external command by :[un]select commands.
	Similar to %u/%U and menus allow <file>[:[<line>:[<col>:]] <description>]
	format.  Thanks to j-xella.

	Support italics in quickview/view mode when curses implementation provides
	corresponding extension.  PDCurses doesn't implement it on Windows.
	Fallback is to use "reversed" attribute.  Thanks to GeorgeHJ.

	Escape "=" at the beginning of paths (has special meaning in zsh).  Thanks
	to agguser.

	More accurate error message on handling non directories passed to :cd.

	Slightly better formatting in :undolist menu.

	Fixed preview command not being run with correct working directory on
	startup (e.g., when preview was on in vifminfo).

	Fixed completion for commands that follow "|" when they are preceded by
	commands with complicated syntax like :substitute.
