@@ -565,6 +565,7 @@ const char *tags[] = {
 	"vifm-expr->=",
 	"vifm-expr-env",
 	"vifm-expr-function",
+	"vifm-expr-nesting",
 	"vifm-expr-number",
 	"vifm-expr-option",
 	"vifm-expr-quote",
